gitops/overlays/prod/patch-env.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: employee-service
spec:
  template:
    spec:
      containers:
      - name: employee-service
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: project-service
spec:
  template:
    spec:
      containers:
      - name: project-service
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: budget-service
spec:
  template:
    spec:
      containers:
      - name: budget-service
