gitops/overlays/prod/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dda-app-ingress
spec:
  tls:
  - hosts:
    - app.harishweb.online
    secretName: prod-app-tls
  rules:
  - host: app.harishweb.online
